# hamrah-storage

./: .env.example  .gitignore  .woodpecker.yml  HamrahClient.js  LICENSE  README.md  check_menu.js  docker-compose.yml  dump_dom.js  explore.js  fetch_objects.js  login.js  package-lock.json  package.json  record_deletion.js  record_flow.js  screenshot.js  test_actions.js  test_client.js
.github/workflows/: rust.yml
client_rust/: Cargo.toml  config.yaml.example
client_rust/src/: config.rs  lib.rs  main.rs  s3_backend.rs  webdav_server.rs
docs/: API_DOCUMENTATION.md  DESIGN_DOCUMENT.md  WINDOWS_DUPLICATI_SETUP.md
docs/PRD/: s3_optimization.md  webdav_v1.md
telegram_bot/: Cargo.toml  Dockerfile  README.md
telegram_bot/src/: main.rs
