[package]
name = "client_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "cookies"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"
serde_yaml = "0.9"
s3s = "0.13"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
clap = { version = "4.0", features = ["derive"] }
futures-util = "0.3"
bytes = "1.0"
async-trait = "0.1"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
regex = "1.0"
