[package]
name = "telegram_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
client_rust = { path = "../client_rust" }
teloxide = { version = "0.13", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream"] }
url = "2"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
dotenvy = "0.15"
once_cell = "1"
urlencoding = "2"
